<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Settings">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bf"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="Enter the below userID into the Python script on your Raspberry Pi"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userIDShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@+id/userIDShow" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:layout_marginTop="100dp"
                android:layout_rowWeight="1"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/cardview_light_background"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <EditText
                        android:id="@+id/old_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/new_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_new_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        tools:ignore="InvalidImeActionId" />

                    <EditText
                        android:id="@+id/newPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/new_pass"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        tools:ignore="InvalidImeActionId" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"></LinearLayout>

                    <Button
                        android:id="@+id/changeEmail"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/holo_green_dark"
                        android:text="Change E-Mail"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/changePass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/holo_green_dark"
                        android:text="Change Password"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/send"
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/holo_green_dark"
                        android:text="@string/btn_send"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/holo_green_dark"
                        android:text="@string/btn_remove"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/change_email_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/change_email"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/change_password_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/change_password"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/remove_user_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/remove_user"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/sign_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/holo_green_dark"
                        android:text="@string/btn_sign_out"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">



                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>